[metadata]
name = logstack
version = 0.0.1
author = LogStack Team
author_email = prantoamt@gmail.com
description = logstack is a convenience package to communicate with a logstack server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strativ-dev/logstack
project_urls =
    Bug Tracker = https://github.com/strativ-dev/logstack/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    certifi==2021.10.8
    charset-normalizer==2.0.11
    idna==3.3
    requests==2.27.1
    urllib3==1.26.8

[options.packages.find]
where = src
